# mcpampel

./: README.md  pyproject.toml  smithery.yaml
src/mcpampel/: __init__.py  config_reader.py  scanner.py  server.py
tests/: test_config_reader.py  test_scanner_client.py
