[project]
name = "mcpampel"
version = "0.2.0"
description = "MCP security scanner plugin - scan your installed MCP servers with 16 engines"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MCPAmpel" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
http = ["uvicorn>=0.30", "starlette>=0.37"]

[project.urls]
Homepage = "https://mcpampel.com"
Repository = "https://github.com/MCPAmpel/mcpampel"
Issues = "https://github.com/MCPAmpel/mcpampel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpampel"]

[project.scripts]
mcpampel = "mcpampel.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
